# odatalite

odatalite/: LICENSE  Makefile.am  Makefile.in  configure  configure.ac  license.h_
odatalite/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
odatalite/doc/: features.txt  limitations.txt  notes.txt  questions.txt  sizenotes.txt  todo.txt
odatalite/doc/texi/: GNUmakefile  i  odatalite.html  odatalite.info  odatalite.texi  v
odatalite/etc/phit/: phitd.conf  phitd.conf.install  plugins.conf  plugins.conf.install  providers.conf  providers.conf.install
odatalite/scripts/: autoclean  autogen  build.bat  clean.bat  cleanup.bat  conf32  fixup  prependlicense  rebuild
odatalite/src/: Makefile.am  Makefile.in  common.h  config.h.in  config.h.in~  phit.h  phitfeatures.h  winconfig.h
odatalite/src/RedfishSchema/: AccountService.0.9.2.metadata  Chassis.0.9.2.metadata  ComputerSystem.0.9.2.metadata  DMTFExtensions.0.9.2.metadata  Errors.0.9.2.metadata  EthernetNetworkInterface.0.9.2.metadata  Event.0.9.2.metadata  EventService.0.9.2.metadata  Firmware.0.9.2.metadata  IPAddresses.0.9.2.metadata  ListenerDestination.0.9.2.metadata  LogEntry.0.9.2.metadata  LogService.0.9.2.metadata  Manager.0.9.2.metadata  ManagerAccount.0.9.2.metadata  ManagerNetworkService.0.9.2.metadata  Messages.0.9.2.metadata  MiscMetrics.0.9.2.metadata  PowerMetrics.0.9.2.metadata  Redundancy.0.9.2.metadata  Resource.0.9.2.metadata  SerialInterface.0.9.2.metadata  ServiceRoot.0.9.2.metadata  Session.0.9.2.metadata  SimpleStorage.0.9.2.metadata  Task.0.9.2.metadata  TaskService.0.9.2.metadata  ThermalMetrics.0.9.2.metadata  VirtualMedia.0.9.2.metadata
odatalite/src/RedfishSchema/Chipwise/: Chipwise.CustomTypes.metadata
odatalite/src/RedfishSchema/Service/: Service.Annotations.metadata  Service.metadata
odatalite/src/base/: Makefile.am  Makefile.in  addr.c  addr.h  addrclient.c  alloc.c  alloc.h  allocprint.c  array.c  array.h  auth.c  auth.h  authclient.c  authserver.c  base64.h  base64dec.c  base64enc.c  buf.c  buf.h  buf.h.new  chars.c  chars.h  cleanup.c  cleanup.h  conffile.c  conffile.h  datetime.c  datetime.h  datetimetimestamp.c  dump.c  dump.h  env.c  env.h  err.c  err.h  file.c  file.h  find.c  find.h  format.c  (+57 more)
odatalite/src/base/base64/: base64.c
odatalite/src/base/chars/: genchars.c
odatalite/src/base/genstrtbl/: GNUmakefile  dow.txt  main.cpp
odatalite/src/base/hex/: hex.c
odatalite/src/client/: Makefile.am  Makefile.in  client.c  client.h
odatalite/src/csdl2c/: Makefile.am  Makefile.in  csdl2c.c  xml.c  xml.h
odatalite/src/csdl2c/test/: GNUmakefile  main.c
odatalite/src/json/: Makefile.am  Makefile.in  json.c  x.json
odatalite/src/json2schema/: Makefile.am  README  main.cpp  objects.cpp  objects.h  schema.c  todo.txt
odatalite/src/odata/: Makefile.am  Makefile.in  alloc.c  alloc.h  array.c  chars.c  chars.h  compare.c  compare.h  csdl.c  csdl.h  deserialize.c  destructors.c  destructors.h  format.c  format.h  getters.c  getters.h  json.h  jsonarray.c  jsonarray.h  jsonobject.c  jsonobject.h  jsonparser.c  jsonparser.h  name.h  object.c  odata.h  odatacxx.h  odatacxxinlines.h  odatamacros.h  odatatypes.txt  outstream.c  outstream.h  pair.c  pair.h  providerentry.c  providerentry.h  providerentryprint.c  queryoption.c  (+17 more)
odatalite/src/odata/chars/: GNUmakefile  chars.c
odatalite/src/odata/examples/: Category.json  ComputerSystem.json  ComputerSystem.xml  Element.json  Manager.json  NetworkService.json  Products.json  create.txt  error.json  example.txt  links.txt  messages.txt  ops.txt  update.txt  uri.txt
odatalite/src/odata/providers/: Makefile.am  Makefile.in  extrarules.mak
odatalite/src/olcli/: Makefile.am  Makefile.in  examples.txt  gadget11.json  olcli.c  options.h
odatalite/src/phitcli/: Makefile.am  Makefile.in  options.h  phitcli.c
odatalite/src/phitcli/samples/: Check.req  CreateGadget.req  GetErr.req  GetFrog.req  GetFrogNoChunking.req  GetFrogs.req  GetFrogsNoChunking.req  GetFrogsPlain.req  GetGadgets.req  GetHeapUsage.req  GetMetadata.req  GetPresident.req  GetPresidents.req  GetProcess.req  GetProcesses.req  GetServiceDocument.req  GetVehicle.req  GetWidget.req  UpdateInvalid.req  echo.req  echoNoChunking.req  get.req
odatalite/src/plugins/: Makefile.am  Makefile.in  extrarules.mak
odatalite/src/plugins/echo/: Makefile.am  Makefile.in  echoplugin.c
odatalite/src/plugins/hello/: Makefile.am  Makefile.in  helloplugin.c
odatalite/src/plugins/odata/: .exrc  Makefile.am  Makefile.in  odataplugin.c  odataplugin.h  options.h  post.c  post.h  providers.c  providers.h  scope.c  scope.h  webpage.c  webpage.h
odatalite/src/plugins/ping/: Makefile.am  Makefile.in  pingplugin.c
odatalite/src/server/: Makefile.am  Makefile.in  connection.c  connection.h  context.c  context.h  contextoptions.h  defaultplugin.c  defaultplugin.h  disp.c  disp.h  help.c  help.h  listener.c  listener.h  options.h  plugin.c  plugin.h  server.c  t1.opt.txt  t2.opt.txt  t3.opt.txt  t4.opt.txt  webpage.c  webpage.h  x
odatalite/src/tests/: Makefile.am  Makefile.in  test.h
odatalite/src/tests/base/: Makefile.am  Makefile.in  conffile.conf  myfile.conf  phitplugins.conf  roles.conf  rolesbad.conf  testbase.c
odatalite/src/tests/csdl/: AccountService.c  Chassis.c  ComputerSystem.c  DMTFExtensions.c  Errors.c  EthernetNetworkInterface.c  Event.c  EventService.c  Firmware.c  IPAddresses.c  ListenerDestination.c  LogEntry.c  LogService.c  Makefile.am  Makefile.in  Manager.c  ManagerAccount.c  ManagerNetworkService.c  Messages.c  MiscMetrics.c  PowerMetrics.c  Redundancy.c  Resource.c  SerialInterface.c  ServiceRoot.c  Session.c  SimpleStorage.c  Task.c  TaskService.c  ThermalMetrics.c  VirtualMedia.c  testcsdl.c
odatalite/src/tests/odata/: Makefile.am  Makefile.in  providers.conf  testodata.c
odatalite/src/tests/odatacxx/: Makefile.am  Makefile.in  testodatacxx.cpp
odatalite/src/tools/: Makefile.am  Makefile.in
odatalite/src/tools/base64dec/: Makefile.am  Makefile.in  base64dec.c
odatalite/src/tools/base64enc/: Makefile.am  Makefile.in  base64enc.c
(+43 files in other folders)
